--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -332,12 +332,13 @@ footer h2 {
 .events {
   display: flex;
   flex-direction: column;
-  width: 80%;
+  width: 90%;
 }
 
 .content {
   display: flex;
   flex-direction: column;
+  padding: 10px;
 }
 
 .events h3 {
@@ -352,7 +353,8 @@ footer h2 {
 
 .events p {
   font-size: 18px;
-  margin: 5px;
+  font-weight: 600;
+  margin: 10px;
 }
 
 .events a {
@@ -360,6 +362,7 @@ footer h2 {
   text-decoration: none;
 	cursor: pointer;
   font-size: 25px;
+  font-weight: 600;
   margin: auto 0 10px 10px;
 }
 
@@ -368,8 +371,10 @@ footer h2 {
 }
 
 .eventImg img {
-  width: 100%;
-  height: 200px;
+  float: right;
+  object-fit:cover;
+  width: 300px;
+  height: 300px;
   vertical-align: middle;
   transition: 0.3s ease-in-out;
 }
@@ -381,10 +386,10 @@ footer h2 {
 .left,
 .right {
   display: grid;
-  grid-template-columns: 70% 30%;
+  grid-template-columns: 60% 40%;
   margin: 20px;
-  width: 60%;
-  height: 200px;
+  width: 75%;
+  height: 300px;
   box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
 }
 
@@ -608,17 +613,24 @@ footer h2 {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .left,
-.right {
-  display: flex;
-  flex-direction: column;
-  width: 65%;
-  height: auto;
-}
+  .events {
+    width: 100%;
+  }
 
-.eventImg img {
-  padding: 0;
-}
+  .left,
+  .right {
+    grid-template-columns: 100%;
+    /* align-self: center; */
+    width: 60%;
+    height: auto;
+  }
+
+  .eventImg img {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    float: none;
+  }
 }
 
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
@@ -657,10 +669,10 @@ footer h2 {
   }
 
   .left,
-.right {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: auto;
-}
+  .right {
+    grid-template-columns: 100%;
+    align-self: center;
+    width: 95%;
+    height: auto;
+  }
 }
