--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
   --primary-color: #111;
   --secondary-color: #818181;
   --tertiary-color: #3c3a3a;
+  --quaternary-color: rgba(30,61,40,255);
 }
 
 * {
@@ -42,9 +43,10 @@ header {
 }
 
 header h1 {
-  padding-top: 25px;
-  font-size: 100px;
+  font-size: 90px;
+  height: 175px;
   text-align: center;
+  padding-top: 35px;
 }
 
 .header img {
@@ -94,7 +96,13 @@ header h1 {
 
 #main {
   display: flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
   align-items: center;
   cursor: pointer;
   font-size: 35px;
@@ -168,6 +176,9 @@ footer a {
 /* Category Styles */
 .category {
   display: flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-evenly;
@@ -191,8 +202,14 @@ footer a {
 /* Hero Section Styles */
 .hero {
   display: flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   justify-content: center;
   flex-wrap: wrap;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -225,6 +242,9 @@ footer a {
 /* Links on Homepage Styles */
 .links {
   display: flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
@@ -245,6 +265,9 @@ footer a {
 /* Contact Form Styles */
 .contact-info {
   display: flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox; 
   justify-content: space-between;
   flex-wrap: wrap;
 }
@@ -338,12 +361,18 @@ footer a {
 
 .events {
   display: flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   flex-direction: column;
   width: 90%;
 }
 
 .content {
   display: flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   flex-direction: column;
   padding: 10px;
 }
@@ -355,34 +384,39 @@ footer a {
 
 .events h4 {
   font-size: 22px;
-  margin: 5px;
+  margin: 5px 10px; 
 }
 
 .events p {
-  font-size: 18px;
+  line-height: 22px;
   font-weight: 600;
   margin: 10px;
 }
 
-.events a {
+.content a {
 	color: var(--primary-color);
   text-decoration: none;
 	cursor: pointer;
   font-size: 25px;
   font-weight: 600;
-  margin: auto 0 10px 10px;
+  margin: auto 0 0 10px;
 }
 
-.events a:hover {
+.content a:hover {
   color: var(--secondary-color);
 }
 
+.eventImg a {
+  width: 300px;
+  height: 300px;
+}
+
 .eventImg img {
+  align-self: center;
   float: right;
   object-fit:cover;
   width: 300px;
   height: 300px;
-  vertical-align: middle;
   transition: 0.3s ease-in-out;
 }
 
@@ -396,7 +430,7 @@ footer a {
   grid-template-columns: 60% 40%;
   margin: 20px;
   width: 75%;
-  height: 300px;
+  height: auto;
   box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
 }
 
@@ -422,6 +456,12 @@ footer a {
   width: 100%;
   flex-direction: column;
   display: flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
   align-items: center;
   justify-content: center;
   margin: 20px 0px 60px 0px;
@@ -460,7 +500,13 @@ footer a {
   position: fixed;
   top: 0;
   display: flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.733);
   margin-top: -1px;
@@ -507,6 +553,9 @@ footer a {
 
 .cards {
   display: flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   flex-wrap: wrap;
   justify-content: space-evenly;
   padding: 5%;
@@ -574,7 +623,13 @@ footer a {
 /* History of Soup Styles */
 .history {
   display: flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -636,7 +691,6 @@ footer a {
   .left,
   .right {
     grid-template-columns: 100%;
-    /* align-self: center; */
     width: 60%;
     height: auto;
   }
