--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,9 +37,10 @@ header {
 }
 
 header h1 {
-  padding-top: 25px;
-  font-size: 100px;
+  font-size: 60px;
+  height: 175px;
   text-align: center;
+  padding-top: 25px;
 }
 
 .header img {
@@ -105,16 +106,6 @@ header h1 {
 
 #main:hover {
   transform: scale(1.1);
-}
-
-@media screen and (max-height: 450px) {
-  .sidenav {
-    padding-top: 15px;
-  }
-
-  .sidenav a {
-    font-size: 18px;
-  }
 }
 /* End Navbar Styles */
 
@@ -188,10 +179,19 @@ footer a {
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
+  flex-direction: column;
+}
+
+.hero h1 {
+  display: none;
+  font-size: 60px;
+  text-align: center;
+  margin-bottom: 30px;
 }
 
 .hero-image {
   max-width: 100%;
+  width: 600px;
   height: auto;
   margin-bottom: 30px;
 }
@@ -213,6 +213,7 @@ footer a {
 
 .hero-cta p {
   font-size: 25px;
+  line-height: 32px;
 }
 /* End Hero Section Styles */
 
@@ -488,22 +489,22 @@ footer a {
 /* History of Soup Styles */
 .history {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  justify-items: center;
+}
+
+.history p {
+  max-width: 600px;
+  font-size: 25px;
+  line-height: 32px;
+  text-align: center;
+  margin: auto;
 }
 
 .soup {
-  margin: 100px auto;
-  width: 600px;
-  height: 300px;
   font-size: 35px;
   text-align: center;
-  border: 1px solid #111;
-  box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
-}
-
-.soup h2 {
-  margin-top: 70px;
+  border-bottom: 1px solid #111;
 }
 
 .turtle {
@@ -512,7 +513,7 @@ footer a {
 }
 /* End History of Soup Styles */
 
-/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+/* MEDIA QUERY FOR SCREENS 980PX AND SMALLER */
 @media screen and (max-width: 980px) {
   footer h2 footer div {
     text-align: center;
@@ -540,7 +541,18 @@ footer a {
   }
 }
 
-/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+/* MEDIA QUERY FOR SCREENS 768PX AND SMALLER */
+@media screen and (max-width: 768px) {
+  header h1 {
+    display: none;
+  }
+
+  .hero h1 {
+    display: block !important;
+  }
+}
+
+/* MEDIA QUERY FOR SCREENS 575PX AND SMALLER */
 @media screen AND (max-width: 575px) {
   .hero-form button {
     width: 100%;
@@ -573,5 +585,16 @@ footer a {
 
   .wrapper {
     grid-template-columns: 100%;
+  }
+}
+
+/* MEDIA QUERY FOR SCREENS 450PX AND SMALLER */
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px;
+  }
+
+  .sidenav a {
+    font-size: 18px;
   }
 }
