--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,8 +364,9 @@ footer a {
 
 /* Events Styles */
 .year {
+  margin: 45px 0 35px 0;
   text-align: center;
-  font-size: 30px;
+  font-size: 35px;
 }
 
 .events {
@@ -387,16 +388,17 @@ footer a {
 }
 
 .events h3 {
-  font-size: 30px;
+  font-size: 40px;
   margin: 10px;
 }
 
 .events h4 {
-  font-size: 22px;
+  font-size: 25px;
   margin: 5px 10px; 
 }
 
 .events p {
+  font-size: 18px;
   line-height: 22px;
   font-weight: 600;
   margin: 10px;
