--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,11 +51,11 @@ header {
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
-  /* height: 300px; */
+  margin: 10px;
 }
 
 .logo img {
-  height: 300px;
+  height: 150px;
   width: auto;
 }
 
@@ -65,7 +65,7 @@ header {
 
 .soup-the-turtle img {
   width: auto;
-  height: 300px;
+  height: 150px;
 }
 /* End Header Styles */
 
@@ -97,7 +97,9 @@ header {
   width: 100%;
   position: absolute;
   z-index: 1;
-  top: 360px;
+  top: 295px;
+  height: 450px;
+  margin-bottom: 480px;
   bottom: 0;
   background-color: var(--primary-color);
   overflow-x: hidden;
@@ -738,13 +740,25 @@ footer a {
 
 /* MEDIA QUERY FOR SCREENS 1150PX AND SMALLER */
 @media screen and (max-width: 1150px) {
-  .motto {
-    display: none;
-  }
+  /* .motto {
+    order: 3;
+  } */
 }
 
 /* MEDIA QUERY FOR SCREENS 980PX AND SMALLER */
 @media screen and (max-width: 980px) {
+  .logo img {
+    height: 150px;
+  }
+
+  .motto {
+    font-size: 35px;
+  }
+
+  .soup-the-turtle img {
+    height: 150px;
+  }
+
   .hero-cta {
     text-align: center;
   }
@@ -786,15 +800,22 @@ footer a {
 
 /* MEDIA QUERY FOR SCREENS 768PX AND SMALLER */
 @media screen and (max-width: 768px) {
-  header {
-    flex-direction: column;
+  .motto {
+    font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 685px) {
+  .motto {
+    order: 3;
   }
 }
 
 /* MEDIA QUERY FOR SCREENS 575PX AND SMALLER */
 @media screen AND (max-width: 575px) {
-  .logo img {
-    width: 100%;
+  
+  .motto {
+    order: 3;
   }
 
   .troop-photo img {
@@ -863,16 +884,6 @@ footer a {
 
   .eagle-oath img {
     max-width: 300px;
-  }
-
-  .mobilenav {
-    top: 660px;
-    height: 450px;
-    margin-bottom: 480px;
-  }
-
-  .mobilenav a {
-    padding: 15px;
   }
 
   .slogan {
